# layream-tauri-geckoview

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  HANDOFF.md  HYPA_ANALYSIS.md  LICENSE  PLAN.md  README.md  layream.keystore
docs/: ARCHITECTURE.md  geckoview-integration.md  risu-fidelity-and-converter.md
layream-app/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
layream-app/src/: App.svelte  app.css
layream-app/src-tauri/: Cargo.toml  tauri.conf.json
layream-app/src-tauri/capabilities/: default.json
layream-app/src-tauri/src/: browser.rs  commands.rs  commands_auth.rs  commands_cbs.rs  commands_chat.rs  commands_hypa.rs  commands_library.rs  commands_platform.rs  commands_settings.rs  commands_workspace.rs  lib.rs  main.rs  persistence.rs  streaming_service.rs
layream-app/src/components/: CBSEditor.svelte  FileImport.svelte  HypaModal.svelte  ResizableTextarea.svelte  WorkspaceSelector.svelte
layream-app/src/lib/: appStore.svelte.js  assemblePrompt.js  autosave.js  chatActions.js  chatSession.js  errors.js  flashError.js  markdownRenderer.js  messageStore.js  streamingManager.js  tauri.js  triggerEngine.js  version.js
layream-app/src/views/: AutopilotView.svelte  CharacterView.svelte  ChatView.css  ChatView.svelte  HypaView.svelte  LibraryView.svelte  ModuleEditView.svelte  PersonaView.svelte  PresetView.svelte  SettingsView.svelte  TestView.svelte
layream-core/: Cargo.toml
layream-core/src/: charx.rs  crypto.rs  error.rs  gca.rs  hypa.rs  lib.rs  mistral.rs  preset.rs  regex.rs  retry.rs  rpack.rs  types.rs  vertex_api.rs  vertex_auth.rs  voyage.rs
layream-core/src/cbs/: ast.rs  eval.rs  grammar.lalrpop  highlighter.rs  mod.rs  parser.rs  tokenizer.rs
layream-core/tests/: cbs_behavior.rs  interop.rs  quality_gate.rs
scripts/: build-apk.sh  env.sh  quality-check.sh  setup-android-env.sh
