[package]
name = "layream-app"
version = "0.3.3"
edition = "2021"
description = "Layream — prompt editor, AI testing studio"

[dependencies]
layream-core = { path = "../../layream-core" }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri-plugin-dialog = "2"
base64 = "0.22"
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "layream_app"
